apps/home-assistant/production/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "16G"
spec:
  tls:
  - hosts:
    - home-assistant.jz-c.org
    secretName: home-assistant-jz-c-org-production-tls
  rules:
  - host: home-assistant.jz-c.org
    http:
      paths:
      - backend:
          serviceName: home-assistant
          servicePort: 8123
